--- a/package.json
+++ b/package.json
@@ -12,22 +12,26 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.13",
     "@nuxtjs/i18n": "8.0.0-beta.10",
+    "@vee-validate/nuxt": "^4.11.6",
+    "@vee-validate/valibot": "^4.11.6",
     "@vueuse/motion": "2.0.0-beta.27",
     "firebase": "^10.3.1",
-    "vue-recaptcha": "3.0.0-alpha.2",
-    "vue-tiny-validate": "^0.2.4"
+    "vue-recaptcha": "3.0.0-alpha.2"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.38.5",
     "@iconify-json/ic": "^1.1.13",
     "@nuxt/image-edge": "1.0.0-28020728.5df24eb",
+    "@sidebase/nuxt-session": "^0.2.7",
+    "@tailvue/nuxt": "^1.0.0",
     "@unocss/eslint-config": "^0.51.8",
     "@unocss/nuxt": "^0.51.8",
     "@vueuse/core": "^10.1.0",
     "@vueuse/nuxt": "^10.1.0",
     "consola": "^3.1.0",
     "eslint": "^8.39.0",
-    "nuxt": "^3.4.2",
+    "nuxt": "^3.7.1",
+    "typed-captchapng": "^1.0.4",
     "typescript": "^5.0.4",
     "unocss-preset-primitives": "0.0.1-beta.5",
     "valibot": "^0.13.1"
