--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.16",
-    "@nuxtjs/i18n": "8.0.0-beta.10",
+    "@nuxtjs/i18n": "8.0.0-rc.4",
     "@vee-validate/nuxt": "^4.11.6",
     "@vee-validate/valibot": "^4.11.6",
     "@vueuse/motion": "2.0.0",
